# Blaze

./: .gitignore  CLAUDE.md  CODING_GUIDELINES.md  Cargo.toml  DESIGN.md  IMPLEMENTATION.md  README.md  SPEC.md  TASKS.md  build.rs  rustfmt.toml
config/: default.toml
migrations/: 001_create_user_themes.down.sql  001_create_user_themes.up.sql  002_change_background_default.down.sql  002_change_background_default.up.sql  003_change_color_scheme_default.down.sql  003_change_color_scheme_default.up.sql  004_add_render_scale.down.sql  004_add_render_scale.up.sql  004_drop_font_size.down.sql  004_drop_font_size.up.sql  005_show_line_numbers_to_boolean.down.sql  005_show_line_numbers_to_boolean.up.sql
scripts/: start-microservices.sh
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  protocol.rs  sanitize.rs
src/commands/: render.rs  theme.rs
src/db/: mod.rs  models.rs
src/renderer/: background.rs  canvas.rs  highlight.rs  mod.rs  rasterize.rs  svg_builder.rs
src/renderer/snapshots/: blaze_bot__renderer__tests__snapshot_rust_hello_world_svg.snap
tests/: bench_pipeline.rs  gen_image.rs  render_pipeline.rs
