[package]
name = "blaze-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Discord (serenity は poise が re-export するため直接依存しない)
poise = "0.6"
tokio = { version = "1", features = ["full"] }

# 構文解析（ランタイムはビルド時ダンプから読み込むため default-syntaxes/default-themes 不要）
syntect = { version = "5", default-features = false, features = ["parsing", "dump-load", "regex-onig"] }

# 画像生成
resvg = "0.45"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["webp", "png"] }
png = "0.17"
fontdue = "0.9"

# データベース
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
chrono = "0.4"

# エラーハンドリング
thiserror = "2"

# レート制限
governor = "0.8"

# 設定管理
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# 入力サニタイズ
unicode-normalization = "0.1"

# ロギング・監視
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# ユーティリティ
dotenvy = "0.15"
regex = "1"

# マイクロサービス間通信
redis = { version = "0.27", features = ["tokio-comp"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
# build.rs で SyntaxSet/ThemeSet をバイナリダンプするため、デフォルト構文・テーマが必要
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
# TypeScript, Kotlin 等デフォルトに含まれないモダン言語の構文定義を追加
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }

[[bin]]
name = "blaze-gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "blaze-worker"
path = "src/bin/worker.rs"

[dev-dependencies]
insta = "1"
